# sugar-toolkit-gtk3

./: .gitignore  .topdeps  .topmsg  CNAME  MAINTAINERS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  index.html  make-doc.sh  portingGTK4.md
ci/: docs.sh
debian/: changelog  control  control.in  copyright  copyright_hints  gbp.conf  python-sugar3.install  rules  watch
doc/: Makefile  conf.py  index.rst  modules.rst  presence.rst  sugar3.activity.activity.rst  sugar3.activity.activityfactory.rst  sugar3.activity.activityhandle.rst  sugar3.activity.activityservice.rst  sugar3.activity.bundlebuilder.rst  sugar3.activity.i18n.rst  sugar3.activity.rst  sugar3.activity.webactivity.rst  sugar3.activity.webkit1.rst  sugar3.activity.widgets.rst  sugar3.bundle.activitybundle.rst  sugar3.bundle.bundle.rst  sugar3.bundle.bundleversion.rst  sugar3.bundle.contentbundle.rst  sugar3.bundle.helpers.rst  sugar3.bundle.rst  sugar3.datastore.datastore.rst  sugar3.datastore.rst  sugar3.dispatch.dispatcher.rst  sugar3.dispatch.rst  sugar3.dispatch.saferef.rst  sugar3.env.rst  sugar3.graphics.alert.rst  sugar3.graphics.animator.rst  sugar3.graphics.colorbutton.rst  sugar3.graphics.combobox.rst  sugar3.graphics.icon.rst  sugar3.graphics.iconentry.rst  sugar3.graphics.menuitem.rst  sugar3.graphics.notebook.rst  sugar3.graphics.objectchooser.rst  sugar3.graphics.palette.rst  sugar3.graphics.palettegroup.rst  sugar3.graphics.palettemenu.rst  sugar3.graphics.palettewindow.rst  (+34 more)
examples/: alert.py  alert.py.bak  animator.py  animator.py.bak  buttons.py  cellrenderericon.py  colorbutton.py  colorbutton.py.bak  sugar  (+31 more)
src/sugar/: Makefile.am  __init__.py  _sugarext.defs  _sugarext.override  _sugarextmodule.c  acme-volume-alsa.c  acme-volume-alsa.h  acme-volume.c  app.c  app.h  client-xsmp.c  client-xsmp.h  client.c  eggaccelerators.h  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c  env.py  gsm-app.c  gsm-app.h  gsm-client-xsmp.c  gsm-client.h  gsm-session.c  gsm-session.h  gsm-xsmp.c  network.py  profile.py  session.c  session.h  session.py  sugar-address-entry.c  sugar-grid.c  sugar-key-grabber.c  sugar-key-grabber.h  sugar-menu.h  sugar-preview.c  sugar-preview.h  util.py  (+2 more)
src/sugar/activity/: Makefile.am  __init__.py  activity.py  activityfactory.py  activityhandle.py  activityservice.py  bundlebuilder.py  i18n.py  main.py  namingalert.py  registry.py  widgets.py
src/sugar/bundle/: Makefile.am  activitybundle.py  bundle.py  contentbundle.py
src/sugar/clipboard/: clipboardservice.py
src/sugar/datastore/: Makefile.am  datastore.py  dbus_helpers.py
src/sugar/graphics/: Makefile.am  alert.py  animator.py  canvastextview.py  colorbutton.py  combobox.py  entry.py  icon.py  iconentry.py  menuitem.py  notebook.py  objectchooser.py  palette.py  palettegroup.py  palettewindow.py  panel.py  radiopalette.py  radiotoolbutton.py  roundbox.py  style.py  toggletoolbutton.py  toolbar.py  toolbarbox.py  toolbox.py  toolbutton.py  toolcombobox.py  tray.py  window.py  xocolor.py
src/sugar/presence/: Makefile.am  __init__.py  activity.py  buddy.py  connectionmanager.py  presenceservice.py  sugartubeconn.py  tubeconn.py  util.py
src/sugar3/: .gitignore  Makefile.am  Makefile.in  __init__.py  _sugarbaseext.defs  _sugarbaseext.override  _sugarbaseextmodule.c  acme-volume-alsa.c  acme-volume-alsa.h  config.py.in  eggaccelerators.c  eggaccelerators.h  eggdesktopfile.c  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient-xsmp.h  eggsmclient.c  eggsmclient.h  env.py  gdk-wrapper.c  gdk-wrapper.h  gsm-app.c  gsm-client-xsmp.c  gsm-client-xsmp.h  gsm-client.c  gsm-client.h  gsm-session.c  gsm-xsmp.h  logger.py  mime.py  network.py  power.py  profile.py  rsvg-wrapper.c  rsvg-wrapper.h  session.py  speech.py  sugar-clipboard.c  sugar-clipboard.h  sugar-cursor-tracker.c  (+20 more)
src/sugar3/activity/: Makefile.am  Makefile.in  __init__.py  activity.py  activityfactory.py  activityhandle.py  activityinstance.py  activityservice.py  alerts.py  bundlebuilder.py  htmlactivity.py  i18n.py  main.py  namingalert.py  ported_activity.py  webactivity.py  webkit1.py  widgets.py
src/sugar3/bundle/: Makefile.am  Makefile.in  __init__.py  activitybundle.py  bundle.py  bundleversion.py  contentbundle.py  helpers.py
src/sugar3/cordova/: Makefile.am  accelerometer.py  camera.py  cordovaSocket.py  device.py  dialog.py  globalization.py  network.py
src/sugar3/datastore/: Makefile.am  Makefile.in  datastore.py
src/sugar3/dispatch/: Makefile.am  Makefile.in  __init__.py  dispatcher.py  license.txt  saferef.py
src/sugar3/event-controller/: Makefile.am  Makefile.in  sugar-enum-types.c  sugar-enum-types.c.template  sugar-enum-types.h  sugar-enum-types.h.template  sugar-event-controller.c  sugar-event-controller.h  sugar-event-controllers.h  sugar-long-press-controller.c  sugar-long-press-controller.h  sugar-rotate-controller.c  sugar-rotate-controller.h  sugar-swipe-controller.c  sugar-swipe-controller.h  sugar-touch-controller.c  sugar-touch-controller.h  sugar-zoom-controller.c  sugar-zoom-controller.h
src/sugar3/graphics/: Makefile.am  Makefile.in  alert.py  animator.py  canvastextview.py  collabwrapper.py  colorbutton.py  combobox.py  entry.py  icon.py  iconentry.py  menuitem.py  modal.py  notebook.py  objectchooser.py  palette.py  palettegroup.py  palettemenu.py  palettemenuitem.py  palettewindow.py  panel.py  popwindow.py  progressicon.py  progresstoolbutton.py  radiopalette.py  radiotoolbutton.py  roundbox.py  scrollingdetector.py  style.py  texteditor.py  toggletoolbutton.py  toolbarbox.py  toolbox.py  toolbutton.py  toolcombobox.py  tray.py  window.py  xocolor.py  xoicon.py
src/sugar3/graphics/webkit/: Makefile.am  __init__.py  shared.py  webkit1.py  webkit2.py
src/sugar3/presence/: Makefile.am  Makefile.in  __init__.py  activity.py  buddy.py  connectionmanager.py  filetransfer.py  presenceservice.py  sugartubeconn.py  tubeconn.py  wrapper.py
src/sugar3/test/: Makefile.am  Makefile.in  _unittest.py  discover.py  uitree.py  unittest.py
(+398 files in other folders)
