sugardir = $(pythondir)/sugar/activity
sugar_PYTHON =              \
	__init__.py             \
	activity.py             \
	activityfactory.py      \
	activityhandle.py       \
	activityservice.py      \
	bundlebuilder.py        \
	i18n.py			\
	main.py                 \
	namingalert.py          \
	widgets.py
