sugardir = $(pythondir)/sugar/graphics
sugar_PYTHON =              \
	alert.py                \
	animator.py             \
	canvastextview.py       \
	colorbutton.py          \
	combobox.py             \
	entry.py                \
	iconentry.py            \
	icon.py                 \
	__init__.py             \
	menuitem.py             \
	notebook.py             \
	objectchooser.py        \
	palettegroup.py         \
	palette.py              \
	palettewindow.py        \
	panel.py                \
	radiopalette.py         \
	radiotoolbutton.py      \
	roundbox.py             \
	style.py                \
	toggletoolbutton.py     \
	toolbarbox.py           \
	toolbox.py              \
	toolbutton.py           \
	toolcombobox.py         \
	tray.py                 \
	window.py               \
	xocolor.py
