sugardir = $(pythondir)/sugar3/activity
sugar_PYTHON =              \
	__init__.py             \
	activity.py             \
	activityfactory.py      \
	activityhandle.py       \
	activityservice.py      \
	alerts.py               \
	bundlebuilder.py        \
	webkit1.py				\
	webactivity.py         \
	i18n.py			\
	widgets.py
