sugardir = $(pythondir)/sugar3/activity
sugar_PYTHON =              \
	__init__.py             \
	activity.py             \
	activityinstance.py     \
	activityfactory.py      \
	activityhandle.py       \
	activityservice.py      \
	bundlebuilder.py        \
	webactivity.py         \
	i18n.py			\
	widgets.py
