sugardir = $(pythondir)/sugar3/graphics
sugar_PYTHON =              \
	alert.py                \
	animator.py             \
	colorbutton.py          \
	combobox.py             \
	iconentry.py            \
	icon.py                 \
	__init__.py             \
	menuitem.py             \
	notebook.py             \
	objectchooser.py        \
	palettegroup.py         \
	palette.py              \
	palettemenu.py          \
	palettewindow.py        \
	panel.py                \
	radiopalette.py         \
	radiotoolbutton.py      \
	style.py                \
	toggletoolbutton.py     \
	toolbarbox.py           \
	toolbox.py              \
	toolbutton.py           \
	toolcombobox.py         \
	tray.py                 \
	window.py               \
	xocolor.py
